--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 <div class="py-0">
   <div class="container">
-    <div class="section-title">
+    <div class="section-title slide-in">
       <h2 class="tit"><a class="sec-tit" href="blog.html">Blog</a></h2>
     </div>
     <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
@@ -253,7 +253,7 @@
 
     <div class="site-section py-0">
       <div class="container">
-        <div class="section-title" style="margin-bottom: -40px;">
+        <div class="section-title slide-in" style="margin-bottom: -40px;">
           <h3 class="tit"><a class="sec-tit" href="#">Ausgewählte Artikel</a></h3>
         </div>
       </div>
@@ -306,7 +306,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="section-title">
+            <div class="section-title slide-in">
               <h3 class="tit"><a class="sec-tit" href="politik.html">Politik</a></h3>
             </div>
 
@@ -327,7 +327,7 @@
             <a class="btn" href="politik.html">Mehr Artikel</a>
             <br><br>
 
-            <div class="section-title">
+            <div class="section-title slide-in">
               <h3 class="tit"><a class="sec-tit" href="wirtschaft.html">Wirtschaft</a></h3>
             </div>
             <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
@@ -358,7 +358,7 @@
             <a class="btn" href="wirtschaft.html">Mehr Artikel</a>
             <br><br>
 
-            <div class="section-title">
+            <div class="section-title slide-in">
               <h3 class="tit"><a class="sec-tit" href="business.html">Geschäftlich</a></h3>
             </div>
             <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
@@ -422,18 +422,18 @@
             document.write(a);
             </script>-jähriger "Junior-Student" im Fachbereich Physik an der Uni Hamburg. In interessiere ich mich für Politik, Geschichte, Philosophie, klassische Herrenmode und Wirtschaft. In meiner Freizeit spiele ich Schlagzeuge, tanze und programmiere gerne.</p>
 
-          <div class="social-media">
-            <a href="https://www.linkedin.com/in/jannik-schilling/"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://www.xing.com/profile/Jannik_Schilling7/"><i class="fab fa-xing"></i></a>
-            <a href="mailto:Jannik@Schilling.land"><i class="fas fa-envelope"></i></a>
-            <a href="tel:015233765747"><i class="fa fa-phone"></i></a>
-            <a href="contact.html"><i class="fa fa-comment"></i></a>
-          </div>
         </div>
 
         <div class="footer-right">
-            <h2>Newsletter abonnieren</h2>
-
+            <h2>Kontakt</h2>
+            <p>Sie können mich über die folgenden Wege kontaktieren:</p>
+            <div class="social-media">
+              <a href="https://www.linkedin.com/in/jannik-schilling/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.xing.com/profile/Jannik_Schilling7/"><i class="fab fa-xing"></i></a>
+              <a href="mailto:Jannik@Schilling.land"><i class="fas fa-envelope"></i></a>
+              <a href="tel:015233765747"><i class="fa fa-phone"></i></a>
+              <a href="contact.html"><i class="fa fa-comment"></i></a>
+            </div>
         </div>
       </div>
     </div>
